# strix-fc

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
LICENSES/: Apache-2.0.txt  GPL-2.0-only.txt
docs/: host-agent-behavior.md  host-agent-netlink-schema.md  kernel-module-maintainer-guide.md  netlink-wire-schema.md  specification.md
include/: apollo_fc_compat.h  strix_fc_compat.h
scripts/: demo_dual_fabric.sh  e2e_scan_test.sh
scripts/lxd/: e2e_fc_agent_test.sh  functional_test_lxd.sh  vm_consumer_agent_test.sh  vm_consumer_osbrick_fc_test.sh  vm_consumer_osbrick_test.sh  vm_consumer_test.sh  vm_target_gateway_setup.sh  vm_target_setup.sh
src/apollo_fc/: Makefile  apollo_fc.c
src/dm_apollo_fc/: Makefile  dm_apollo_fc.c
src/dm_strix_fc/: Makefile  dm_strix_fc.c
src/strix_fc/: Makefile  strix_fc.c
systemd/: apollo-fc-agent.service  strix-fc-agent.service
userspace/apollo_fcctl/: agent_config.py  cli.py  netlink.py
userspace/apollo_fcctl/agent/: __init__.py  config.py  fc.py  iscsi.py  main.py  reconcile.py
userspace/strix_fcctl/: __init__.py  cli.py  netlink.py
userspace/strix_fcctl/agent/: __init__.py  config.py  fc.py  iscsi.py  main.py  models.py  reconcile.py
