[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strix-fc"
version = "0.1.0"
description = "Strix Fake Fibre Channel control utility"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.0.0",
  "pyroute2>=0.7.12",
  "PyYAML>=6.0.1",
]

[project.scripts]
strix-fcctl = "strix_fcctl.cli:main"
strix-fc-agent = "strix_fcctl.agent.main:main"

[tool.setuptools]
package-dir = {"" = "userspace"}

[tool.setuptools.packages.find]
where = ["userspace"]